--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,14 @@
-/* 
-    General Styles
-*/
+.nav-button {  
+    float: right;
+    padding-right: 10px;
+    margin-right: 5px;
+}
+ 
+.bt-navbar {
+     margin-right: 5px;
+} 
+
+.navbar-logo {
+    height: 60px;
+    margin-left: 10px;
+}
