--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,7 +1,16 @@
+.cards{
+    margin: 1rem;
+    padding: 1rem;
+}
+
+.card{
+    background-color: rgb(77, 81, 84);
+    color: white;
+}
+
 .custom-card {
     overflow-x: scroll;
 }
-
 
 .button-group {
     display: inline-flex;
