--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,7 @@
+body{
+background-color: black;
+}
+
 .nav-button {  
     float: right;
     padding-right: 10px;
@@ -11,4 +15,38 @@
 .navbar-logo {
     height: 60px;
     margin-left: 10px;
+}
+
+.dropdown-menu{
+    background-color: rgb(77, 81, 84);
+    color: white;
+    margin: 1rem;
+}
+
+.lidropdown{
+    padding: 1rem;
+}
+
+h1{
+    margin: 0 1rem 1rem 1rem;
+    padding: 0 1rem 1rem 1rem;
+    color: rgb(222, 170, 11);
+}
+
+.fa-solid{
+    color: red;
+}
+
+.details{
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+}
+
+.detail{
+    margin: 1rem;
+    padding: 1rem;
+}
+
+p{
+    color: white;
 }
